--- a/css/style.css
+++ b/css/style.css
@@ -1069,6 +1069,9 @@ button img {
 form input.error{
   border-bottom: 1px solid #FF2B0D;
 }
+form .personal-data.error{
+  border: 1px solid #FF2B0D;
+}
 label.error {
   display: none !important;
 }
@@ -1079,6 +1082,36 @@ label.error {
 }
 .form-cta a:hover {
   text-decoration: underline;
+}
+.footer-form .radio-button {
+  min-width: 40px;
+  flex: 1 1 100%;
+  margin-top: 20px;
+}
+.footer-form .radio-button label {
+  flex: 0 0 80%;
+  font-size: 12px;
+  color: #828282;
+}
+.popup-form .radio-button {
+  min-width: 40px;
+  flex: 1 1 100%;
+  margin-top: 20px;
+}
+.popup-form .radio-button label {
+  flex: 0 0 80%;
+  font-size: 12px;
+  color: #828282;
+}
+.q5-radio-button {
+  min-width: 40px;
+  flex: 1 1 100%;
+  margin-top: 20px;
+}
+.q5-radio-button label {
+  flex: 0 0 80%;
+  font-size: 12px;
+  color: #828282;
 }
 
 /* === MAP === */
