--- a/css/style.css
+++ b/css/style.css
@@ -391,7 +391,7 @@ button img {
   top: 0;
   right: 0;
   object-fit: cover;
-  object-position: left;
+  object-position: -200px;
 }
 .catalogue .bg-cover {
   width: 100%;
