--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,7 @@ button img {
 .catalogue .bg {
   width: 100%;
   height: 100%;
+  z-index: -2;
 }
 .catalogue .bg-image {
   width: 100%;
@@ -387,11 +388,11 @@ button img {
 .catalogue .bg-image img {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   object-fit: cover;
-  object-position: -200px;
+  /* object-position: -200px; */
 }
 .catalogue .bg-cover {
   width: 100%;
