--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,7 @@ button img {
   width: 100%;
   height: 100%;
   position: relative;
+  background-color: #333;
 }
 .bg-image img {
   position: absolute;
