--- a/css/style.css
+++ b/css/style.css
@@ -1129,6 +1129,9 @@ label.error {
   font-size: 12px;
   color: #828282;
 }
+.open-personal {
+  text-decoration: underline;
+}
 
 /* === MAP === */
 
@@ -1208,6 +1211,9 @@ label.error {
   z-index: 1000;
   transition: 0.5s ease;
   padding-bottom: 80px;
+}
+.personal-popup {
+  z-index: 1100;
 }
 .popup.open {
   visibility: visible;
