--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ button img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: bottom;
+  object-position: top;
 }
 .main-page .bg-image img {
   object-fit: cover;
@@ -295,6 +295,9 @@ button img {
   top: 0;
   left: 0;
   background-color: rgba(0,0,0,0.6);
+}
+.main-page .bg-cover {
+  background: radial-gradient(38.78% 63.59% at 63.59% 53.67%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.522) 100%)
 }
 
 /* === LOGOS === */
